kubernetes/dev/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: dev
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
      annotations:
        contact.email: "mmutagha@gmail.com"
    spec:
      containers:
        - name: my-app
          image: betrand1997/my-static-websites:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50
          resources:
            requests:
              cpu: 60m
              memory: 130Mi
            limits:
              cpu: 300m
              memory: 256Mi
