kubernetes/dev/dev-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-app-service
#   namespace: dev
# spec:
#   selector:
#     app: my-app
#   ports:
#     - protocol: TCP
#       port: 8080        # ClusterIP service port (optional)
#       targetPort: 50    # Pod's container port
#       nodePort: 30000    # External NodePort
#   type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: dev
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50
  type: ClusterIP
